--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
